# TestRepo

Server/: CMakeLists.txt  CMakeSettings.json
Server/Server/: CMakeLists.txt  CarPetServer.cpp  Server.h  Start.cpp
Server/src/: CMakeLists.txt  Start.cpp
Server/src/Tools/: CPLogger.cpp  CPLogger.h
